--- a/dports/devel/ncurses/Portfile
+++ b/dports/devel/ncurses/Portfile
@@ -1,10 +1,10 @@
 # $Id$
 
 PortSystem 1.0
-PortGroup  muniversal 1.0
 
 name            ncurses
 version         5.7
+revision        1
 categories      devel
 platforms       darwin freebsd
 maintainers     jmr openmaintainer
@@ -25,6 +25,9 @@ checksums		md5		cce05daf61a64501ef6cd8da1f727ec6 \
 
 # required for terminfo
 depends_run     port:ncursesw
+
+# from http://www.opensource.apple.com/source/ncurses/ncurses-27/patches/
+patchfiles      ungetch_guard.diff
 
 configure.cppflags
 configure.ldflags
@@ -56,44 +59,13 @@ platform freebsd {
 }
 
 if {[variant_isset universal]} {
-    merger_arch_compiler yes
+    configure.args-append --with-chtype=int
 
-    pre-destroot {
-        global merger_dont_diff
-        # These tests must be done in pre-destroot to ensure universal_archs_to_use has the correct values.
-        if { [llength ${universal_archs_to_use}] > 2 } {
-            lappend merger_dont_diff ${prefix}/include/${name}/curses.h
-        }
-    }
-
-    # When cross-compiling, force configure script to assume file system is the same on build and host architectures.
-    #     We can not use --enable-mixed-case=[yes,no] since HFS+ case sensitivity is not known.
-    patchfiles-append  patch-configure.diff
-
-    # Build process requires compiler and pre-processor to build binaries which run on build architecture.
-    lappend cross_configure_args  --with-build-cc='${configure.cc}'
-    lappend cross_configure_args  --with-build-cpp='${configure.cpp}'
-
-    # Unless, _XOPEN_SOURCE_EXTENDED is defined, include/curses.h will not include some system header files,
-    #     which in turn will cause problems with ncurses/curses.priv.h.
-    lappend cross_configure_args  --with-build-cppflags=-D_XOPEN_SOURCE_EXTENDED
-
-    # Configure script attempts to run a test program which allocates a chunk of memory and writes to it.
-    #     If cross-compiling, default does not assume the program would succeed (safest option).
-    lappend cross_configure_args  --enable-big-core
-
-    # For chtype, configure script chooses between int and long for smallest data type which can hold, up to version 5.7, 31 bits.
-    #     If sizeof(unsigned long)==sizeof(unsigned int), configure script chooses long.
-    # For booltype, configure script tries to find data type xxx with sizeof(bool)==sizeof(xxx).
-    if { ${os.arch}=="i386" } {
-        if { ${os.major} >= 10 } {
-            set merger_configure_args(ppc)   "${cross_configure_args} --with-chtype=long  --with-bool='unsigned int'"
-        }
-        set merger_configure_args(ppc64)   "${cross_configure_args} --with-chtype=int  --with-bool='unsigned char'"
-    } else {
-        set merger_configure_args(i386)    "${cross_configure_args} --with-chtype=long --with-bool='unsigned char'"
-        set merger_configure_args(x86_64)  "${cross_configure_args} --with-chtype=int  --with-bool='unsigned char'"
-    }
+    # check that this doesn't start breaking anything with new versions
+	post-configure {
+	    reinplace s/1UL/1U/g "${worksrcpath}/include/curses.head"
+	    system "cd ${worksrcpath} && ed - include/curses.head < ${filespath}/include_curses.head.ed"
+	}
 }
 
 use_parallel_build	yes
