PCLauncher: add notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@72334 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PCLauncher/Portfile
+++ b/dports/games/PCLauncher/Portfile
@@ -46,3 +46,11 @@ post-destroot {
         ln -s ${prefix}/bin/PlasmaClient ${destroot}${applications_dir}/PCLauncher.app/Contents/Resources/${app}.app/Contents/MacOS/${app}
     }
 }
+
+notes "
+To start PlasmaClient, run PCLauncher in ${applications_dir}
+
+Instructions for using PlasmaClient are in the file ${prefix}/share/doc/PlasmaClient/readme.rtf
+
+For more information, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
+"
