--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   cmake 1.0
 
 name                        libhsplasma
-version                     0.0-704
+version                     0.0-722
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -21,22 +21,17 @@ long_description            libHSPlasma is a library for reading files used \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
-hg.tag                      6b48fe991d5e
+hg.tag                      ab04914fbe8a
 
 depends_lib                 port:zlib \
                             port:jpeg \
                             port:openssl \
                             port:python26
 
-patchfiles                  patch-Python-CMakeLists.txt.diff \
-                            patch-endian.diff
-
-post-patch {
-    reinplace "s|@PYTHON@|${prefix}/bin/python2.6|g" ${worksrcpath}/Python/CMakeLists.txt
-}
+patchfiles                  patch-endian.diff
 
 configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
-                            -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
+                            -DPYTHON_EXECUTABLE:FILEPATH=${prefix}/bin/python2.6 \
                             -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib
 
 set pyhsplasma              ${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/PyHSPlasma.so
