--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,7 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 epoch                       1
-version                     0.0.1-270
+version                     0.0.1-275
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -23,7 +23,7 @@ long_description            ${name} is an open-source cross-platform \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
-hg.tag                      1a917fae0724
+hg.tag                      8e9a3e21306d
 
 depends_lib                 port:bullet \
                             port:python26 \
@@ -33,8 +33,6 @@ depends_lib                 port:bullet \
                             port:openssl \
                             port:libsdl \
                             port:libhsplasma
-
-depends_run                 port:Drizzle
 
 if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
     depends_lib-delete port:boost
@@ -54,7 +52,6 @@ if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
 
 post-extract {
     reinplace "s|\r||g" ${worksrcpath}/win32dist/readme.rtf
-    copy ${filespath}/PlasmaClient.in ${workpath}/PlasmaClient
 }
 
 patchfiles                  patch-win32dist-readme.rtf.diff
@@ -66,17 +63,12 @@ configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
                             -DSDL_LIBRARY="${prefix}/lib/libSDLmain.a\;${prefix}/lib/libSDL.dylib\;-framework Cocoa"
 
-post-build {
-    reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
-    reinplace "s|@APPLICATIONS_DIR@|${applications_dir}|g" ${workpath}/PlasmaClient
-}
-
 destroot.keepdirs           ${destroot}${prefix}/var/log/${name}
 
 set docdir ${prefix}/share/doc/${name}
 post-destroot {
-    xinstall -d ${destroot}${applications_dir}/PlasmaClient.app/Contents/MacOS
-    xinstall ${workpath}/PlasmaClient ${destroot}${applications_dir}/PlasmaClient.app/Contents/MacOS
+    xinstall -d ${destroot}${prefix}/share/mystonline/data
+    xinstall -W ${worksrcpath}/win32dist global.wpm ${destroot}${prefix}/share/mystonline/data
     
     xinstall -d ${destroot}${docdir}
     xinstall -W ${worksrcpath}/win32dist readme.rtf gpl.txt ${destroot}${docdir}
@@ -85,7 +77,9 @@ post-destroot {
 }
 
 notes "
-Instructions for using ${name} are in the file ${docdir}/readme.rtf.
+To start ${name}, install the PCLauncher port and run PCLauncher in ${applications_dir}
+
+Instructions for using ${name} are in the file ${docdir}/readme.rtf
 
 For more information, please visit the Guild of Writers' IRC channel at irc://irc.guildofwriters.com/#writers
 "
