--- a/dports/databases/tokyotyrant/Portfile
+++ b/dports/databases/tokyotyrant/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                tokyotyrant
 version             1.1.40
 categories          databases
-maintainers         nomaintainer
+maintainers         stromnov openmaintainer
 platforms           darwin
 
 description         Tokyo Cabinet remote server
