--- a/dports/databases/tokyotyrant/Portfile
+++ b/dports/databases/tokyotyrant/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                tokyotyrant
-version             1.1.40
+version             1.1.41
 categories          databases
 maintainers         stromnov openmaintainer
 platforms           darwin
@@ -14,12 +14,12 @@ description         Tokyo Cabinet remote server
 long_description \
     Tokyo Tyrant is Tokyo Cabinet remote server.
 
-homepage            http://1978th.net/${name}/
+homepage            http://fallabs.com/${name}/
 master_sites        ${homepage}
 
-checksums           md5     cc9b7f0c6764d37700ab43d29a5c6048 \
-                    sha1    2e318b311af18fb255dc902bf1d00e64173eecc9 \
-                    rmd160  3f6396b6fcc689c590a70043001e92b526984a8f
+checksums           md5     a47e58897bd1cbbac173d5a66cc32ae3 \
+                    sha1    060ac946a9ac902c1d244ffafd444f0e5840c0ce \
+                    rmd160  679122c30104213991c640e4c9d4d0203308190a
 
 depends_lib         port:zlib \
                     port:tokyocabinet
