xplanet: update to 1.2.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72345 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xplanet/Portfile
+++ b/dports/x11/xplanet/Portfile
@@ -2,8 +2,7 @@
 
 PortSystem			1.0
 name				xplanet
-version				1.2.0
-revision			5
+version				1.2.1
 categories			x11 graphics
 maintainers			nomaintainer
 description			Render an image of a planet into an X window or file
@@ -18,7 +17,8 @@ platforms			darwin
 homepage			http://xplanet.sourceforge.net/
 master_sites		sourceforge
 
-checksums			md5 87d62fcdf43ad1beec677bfb6e299ac1
+checksums			sha1    c3810c303af8f0cb40520112d9cd1f24fa8b42b5 \
+					rmd160  06c5031ea702bca9cc6ed5ad8c81454a223f508e
 
 depends_lib \
 	port:xorg-libXScrnSaver \
@@ -29,11 +29,11 @@ depends_lib \
 
 configure.args		--with-x --with-xscreensaver --without-gif \
 					--with-jpeg --with-png --with-tiff \
-					--without-freetype --without-pango \
+					--without-freetype --without-pango --without-pnm \
 					--mandir=${prefix}/share/man
 
 post-destroot {
-	set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+	set docdir ${destroot}${prefix}/share/doc/${name}
 	xinstall -d ${docdir}
 	xinstall -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README TODO ${docdir}
 }
@@ -63,6 +63,8 @@ variant aqua description "Use aqua instead of X11" {
 }
 
 variant pnm description "Enable PNM support" {
-	depends_lib-append		lib:libnetpbm.10:netpbm
+	depends_lib-append		port:netpbm
+	configure.args-delete	--without-pnm
+	configure.args-append	--with-pnm
 }
 
