maven2: Add myself as a maintainer.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72350 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -8,7 +8,7 @@ version         2.2.1
 revision        2
 
 categories      java devel
-maintainers     kickstyle.net:gk5885
+maintainers     blair kickstyle.net:gk5885
 platforms       darwin
 
 description     A java-based build and project management environment.
