kyotocabinet: small fixes
git-svn-id: https://svn.macports.org/repository/macports/trunk@72355 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/kyotocabinet/Portfile
+++ b/dports/databases/kyotocabinet/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                kyotocabinet
 version             1.2.16
-revision            1
+revision            2
 categories          databases
 maintainers         stromnov openmaintainer
 platforms           darwin
@@ -21,14 +21,15 @@ long_description    \
     and  a  value.  Each key must be unique within a database.   There is \
     neither concept of data tables nor data types.
 
-homepage            http://fallabs.com/kyotocabinet/
-master_sites        http://fallabs.com/kyotocabinet/pkg/
+homepage            http://fallabs.com/${name}/
+master_sites        http://fallabs.com/${name}/pkg/
 
 checksums           md5     9f6c8f755fe7348c919fdb073270c12d \
                     sha1    916d616cb868cd94c06e170be37a8976e7595312 \
                     rmd160  3c7e9f96d0f51e46a16e69297092c6f7b49bd5e1
 
-patchfiles          patch-configure.diff
+patchfiles          patch-configure.diff \
+                    patch-Makefile.in.diff
 
 depends_lib         port:zlib
 
@@ -39,7 +40,9 @@ configure.cppflags
 configure.ldflags
 
 configure.args      --mandir=${prefix}/share/man \
-                    --datadir=${prefix}/share/doc
+                    --datadir=${prefix}/share/doc \
+                    --disable-lzo \
+                    --disable-lzma
 
 universal_variant   no
 
