--- a/dports/devel/trac/Portfile
+++ b/dports/devel/trac/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup python26 1.0
 
 name			trac
-version			0.12
+version			0.12.1
 categories		devel python
 platforms		darwin
 maintainers		geeklair.net:dluke
@@ -17,17 +17,16 @@ homepage	http://projects.edgewall.com/trac/
 master_sites	http://ftp.edgewall.com/pub/trac/
 distname	Trac-${version}
 
-checksums	md5	3e8fabbaf8fe889e9c03a7dff09d5d05 \
-		sha1	f13a5caf2ab353248f696dc5320df7a27c102e06 \
-		rmd160	aca8d024a582519cefef07053517d14722f87609
+checksums	md5	35a9c53ec35466b24a535d19bb6cdfa2 \
+		sha1	062e335a2f5bf6dd5f858711cf38419f73f286b1 \
+		rmd160	3f5e61e27d6217995a9c87401c0c57e4d353d8aa
 		
 depends_lib	port:subversion-python26bindings \
 		port:python26 port:sqlite3 \
 		port:py26-pygments port:py26-genshi \
 		port:py26-babel port:py26-sqlite
 
-post-install {	ui_msg "See http://projects.edgewall.com/trac/wiki/TracInstall for information on setting up a new trac environment."
-		}
+notes		"See http://projects.edgewall.com/trac/wiki/TracInstall for information on setting up a new trac environment."
 
 variant postgres description {Build with postgresql support instead of sqlite} {
 				depends_lib-delete port:sqlite3 port:py26-sqlite
