openmpi: use ${branch} variable
git-svn-id: https://svn.macports.org/repository/macports/trunk@72358 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/openmpi/Portfile
+++ b/dports/science/openmpi/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			openmpi
 version			1.5
+set branch		[join [lrange [split ${version} .] 0 1] .]
 categories		science parallel net
 platforms		darwin
 maintainers		mww openmaintainer
@@ -16,7 +17,7 @@ long_description	Open MPI is a project combining technologies and resources \
 			and computer science researchers.
 
 homepage		http://www.open-mpi.org/
-set subdir		ompi/v1.5/downloads/
+set subdir		ompi/v${branch}/downloads/
 master_sites		http://www.open-mpi.org/software/${subdir} \
 			http://www.open-mpi.de/software/${subdir} \
 			http://icl.cs.utk.edu/open-mpi/${subdir} \
