scite: don't hardcode universal archs or sdkroot (#26804), remove use of -pedantic (see #26806)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72363 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/scite/Portfile
+++ b/dports/editors/scite/Portfile
@@ -36,6 +36,9 @@ post-patch {
     reinplace -E "s/#ifdef (PLAT_MACOSX|__APPLE__)/#if PLAT_MACOSX/" \
         ${workpath}/scintilla/include/Platform.h \
         ${workpath}/scintilla/src/Editor.cxx
+    reinplace s/-pedantic//g ${worksrcpath}/makefile \
+                             ${workpath}/${name}/src/cpp.properties \
+                             ${workpath}/scintilla/gtk/makefile
 }
 
 use_configure   no
@@ -47,10 +50,14 @@ use_parallel_build  yes
 pre-build {
     if {[variant_isset universal]} {
         set lipo_args {}
+        set sysrootflags ""
+        if {${configure.sdkroot} != ""} {
+            set sysrootflags "-isysroot ${configure.sdkroot} "
+        }
 
-        foreach {arch} {i386 ppc} {
+        foreach arch ${configure.universal_archs} {
             system "make -C ${workpath}/scintilla/gtk \
-                GTK2=yes UNIVERSAL_CFLAGS=\"-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ${arch}\""
+                GTK2=yes UNIVERSAL_CFLAGS=\"${sysrootflags}-arch ${arch}\""
 
             file mkdir ${workpath}/scintilla/bin/${arch}
             move ${workpath}/scintilla/bin/scintilla.a ${workpath}/scintilla/bin/${arch}/scintilla.a
