cairo: fix "comma at end of enumerator list" error when cairo-using projects are compiled with stricter warnings enabled; see #26806
git-svn-id: https://svn.macports.org/repository/macports/trunk@72365 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/cairo/Portfile
+++ b/dports/graphics/cairo/Portfile
@@ -10,6 +10,7 @@ name                        cairo
 conflicts                   cairo-devel
 set my_name                 cairo
 version                     1.10.0
+revision                    1
 categories                  graphics
 maintainers                 ryandesign
 license                     LGPLv2.1/MPLv1.1
@@ -50,6 +51,8 @@ archcheck.files             lib/libpixman-1.dylib \
                             lib/libexpat.dylib
 
 minimum_xcodeversions       {8 2.4.1}
+
+patchfiles                  patch-src-cairo.h.diff
 
 pre-configure {
     set pixman_minimum_version 0.12.0
