--- a/dports/x11/lablgtk2/Portfile
+++ b/dports/x11/lablgtk2/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                lablgtk2
-version             2.14.1
+version             2.14.2
 categories          x11 ml
 maintainers         nomaintainer
 description         Objective Caml interface to gtk+ 2.x
@@ -17,9 +17,8 @@ platforms           darwin
 master_sites        http://wwwfun.kurims.kyoto-u.ac.jp/soft/olabl/dist/
 distname            lablgtk-${version}
 
-checksums           md5     bdf7e39d4be20f9f89c89eed865b05f8 \
-                    sha1    d0fb6185f210c6b106c250d1a85541b7da402310 \
-                    rmd160  efa0c1446d03f4deb90656586d479d2b32e110da
+checksums           sha1    fd184418ccbc542825748ca63fba75138d2ea561 \
+                    rmd160  aa463705398eb60712187ef6a252849fb59cbff2
 
 depends_lib         port:ocaml \
                     port:caml-findlib \
