--- a/dports/databases/kyotocabinet/Portfile
+++ b/dports/databases/kyotocabinet/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                kyotocabinet
 version             1.2.16
-revision            2
+revision            3
 categories          databases
 maintainers         stromnov openmaintainer
 platforms           darwin
@@ -27,6 +27,8 @@ master_sites        http://fallabs.com/${name}/pkg/
 checksums           md5     9f6c8f755fe7348c919fdb073270c12d \
                     sha1    916d616cb868cd94c06e170be37a8976e7595312 \
                     rmd160  3c7e9f96d0f51e46a16e69297092c6f7b49bd5e1
+
+dist_subdir         ${name}/${version}_${revision}
 
 patchfiles          patch-configure.diff \
                     patch-Makefile.in.diff
@@ -59,6 +61,18 @@ variant devel conflicts debug profile description {build for development} {
 
 variant profile conflicts debug devel description {build for profiling} {
     configure.args-append   --enable-profile
+}
+
+variant lzo description {build with LZO compression} {
+    configure.args-delete   --disable-lzo
+    configure.args-append   --enable-lzo
+    depends_lib-append      port:lzo2
+}
+
+variant lzma description {build with LZMA compression} {
+    configure.args-delete   --disable-lzma
+    configure.args-append   --enable-lzma
+    depends_lib-append      port:liblzma
 }
 
 livecheck.type      regex
