camlp5: update to 5.15; see #26769
git-svn-id: https://svn.macports.org/repository/macports/trunk@72369 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/camlp5/Portfile
+++ b/dports/lang/camlp5/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                camlp5
-version             5.14
+version             5.15
 categories          lang
 platforms           darwin
 maintainers         nomaintainer
@@ -23,9 +23,8 @@ long_description    Camlp5 is a preprocessor and pretty-printer for \
 homepage            http://pauillac.inria.fr/~ddr/camlp5/
 master_sites        ${homepage}distrib/src/
 
-checksums           md5     dacee4ab14b4ba23ff7c5dc936ef7c3d \
-                    sha1    cae1cb1dfa506f640393c28d9b510a03f947ef9d \
-                    rmd160  0643a1fcf78d4848fd7090d105911dc43990eb66
+checksums           sha1    7ccde66923e2ecb07981a2742dd315e637e37e67 \
+                    rmd160  48f9f409f85e9c1f9a5057e0869fba71c70e969c
 
 depends_build       port:ocaml
 extract.suffix      .tgz
