--- a/dports/textproc/cuneiform/Portfile
+++ b/dports/textproc/cuneiform/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 PortGroup               cmake 1.0
 
 name                    cuneiform
-version                 0.8.0
+version                 1.0.0
 set branch              [join [lrange [split ${version} .] 0 1] .]
 platforms               darwin
 maintainers             nomaintainer
@@ -22,14 +22,20 @@ master_sites            http://launchpad.net/cuneiform-linux/${branch}/${branch}
 distname                ${name}-linux-${version}
 use_bzip2               yes
 
-checksums               md5     271c1adae56bf8b977bf7326f8a8a0bc \
-                        sha1    1627f5d3cd7c8d4fac476fbe749e5593e4460ff0 \
-                        rmd160  29e2ba3e1865643bd1c2cf559c29bc8a88875a49
+checksums               md5     785232ffffad7d82446fbac08a1c3ef9 \
+                        sha1    bdf8bcb3ee578f21032e1f6b6d557e9902f0af77 \
+                        rmd160  22c1dc2cbdfd150892af144e0b95103fd13c8ae2
 
 depends_lib             port:ImageMagick
 
 post-extract {
     file mkdir ${worksrcpath}/build
+}
+
+platform darwin powerpc {
+    patchfiles          patch-perc.c.diff \
+                        patch-CMakeLists.txt.diff \
+                        patch-config.h.in.diff
 }
 
 configure.dir           ${worksrcpath}/build
