kyototycoon: update to version 0.8.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72373 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/kyototycoon/Portfile
+++ b/dports/databases/kyototycoon/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                kyototycoon
-version             0.8.0
+version             0.8.1
 revision            0
 categories          databases
 maintainers         stromnov openmaintainer
@@ -27,9 +27,9 @@ long_description    \
 homepage            http://fallabs.com/${name}/
 master_sites        http://fallabs.com/${name}/pkg/
 
-checksums           md5     8895d6ebb34e568d80367cc1a9bbe0fe \
-                    sha1    d592fa0a81a31162a615e742d5f2fbc4dca73a49 \
-                    rmd160  f62ff7f8064bf0e212a41449dd3ec2ffec0bd81a
+checksums           md5     ed2367ef0c0a6d514dd49fe2fa8e4fce \
+                    sha1    60254fb628382b54881fc5d5ee2c11814a5e9c7b \
+                    rmd160  dfbfe3835ce140f8e48acc90e677d9994d1f54c1
 
 patchfiles          patch-configure.diff
 
@@ -42,7 +42,8 @@ configure.cppflags
 configure.ldflags
 
 configure.args      --mandir=${prefix}/share/man \
-                    --datadir=${prefix}/share/doc
+                    --datadir=${prefix}/share/doc \
+                    --disable-lua
 
 universal_variant   no
 
