kyototycoon: add lua variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@72374 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/kyototycoon/Portfile
+++ b/dports/databases/kyototycoon/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                kyototycoon
 version             0.8.1
-revision            0
+revision            1
 categories          databases
 maintainers         stromnov openmaintainer
 platforms           darwin
@@ -31,7 +31,8 @@ checksums           md5     ed2367ef0c0a6d514dd49fe2fa8e4fce \
                     sha1    60254fb628382b54881fc5d5ee2c11814a5e9c7b \
                     rmd160  dfbfe3835ce140f8e48acc90e677d9994d1f54c1
 
-patchfiles          patch-configure.diff
+patchfiles          patch-configure.diff \
+                    patch-Makefile.in.diff
 
 depends_lib         port:kyotocabinet
 
@@ -60,6 +61,12 @@ variant devel conflicts debug profile description {build for development} {
 
 variant profile conflicts debug devel description {build for profiling} {
     configure.args-append   --enable-profile
+}
+
+variant lua description {build with Lua extension} {
+    configure.args-delete   --disable-lua
+    configure.args-append   --enable-lua
+    depends_lib-append      port:lua
 }
 
 livecheck.type      regex
