--- a/dports/devel/gtk-osx-application/Portfile
+++ b/dports/devel/gtk-osx-application/Portfile
@@ -51,7 +51,7 @@ variant python25 conflicts python26 description {Use Python 2.5} {
     configure.python 	        ${python_prefix}/bin/python2.5
     configure.env-append 	    PYGTK_CODEGEN=${python_prefix}/bin/pygtk-codegen-2.0
     configure.env-append 	    PYGOBJECT_CODEGEN=${python_prefix}/bin/pygobject-codegen-2.0
-    configure.pkg_config_path   ${frameworks_dir}/Python.framework/Versions/2.5/lib/pkgconfig/
+    configure.pkg_config_path   ${python_prefix}/lib/pkgconfig/
     configure.pre_args	        --prefix=${python_prefix}
 }
 
@@ -62,12 +62,23 @@ variant python26 conflicts python25 description {Use Python 2.6} {
     configure.python 	        ${python_prefix}/bin/python2.6
     configure.env-append 	    PYGTK_CODEGEN=${python_prefix}/bin/pygtk-codegen-2.0
     configure.env-append 	    PYGOBJECT_CODEGEN=${python_prefix}/bin/pygobject-codegen-2.0
-    configure.pkg_config_path   ${frameworks_dir}/Python.framework/Versions/2.6/lib/pkgconfig/
+    configure.pkg_config_path   ${python_prefix}/lib/pkgconfig/
     configure.pre_args	        --prefix=${python_prefix}
 }
 
-if {![variant_isset python25]} { 
-    default_variants +python26
+variant python27 conflicts python26 conflicts python25 description {Use Python 2.7} {
+    depends_lib-append port:py27-gtk
+    set python_prefix           ${frameworks_dir}/Python.framework/Versions/2.7
+
+    configure.python            ${python_prefix}/bin/python2.7
+    configure.env-append        PYGTK_CODEGEN=${python_prefix}/bin/pygtk-codegen-2.0
+    configure.env-append        PYGOBJECT_CODEGEN=${python_prefix}/bin/pygobject-codegen-2.0
+    configure.pkg_config_path   ${python_prefix}/lib/pkgconfig/
+    configure.pre_args          --prefix=${python_prefix}
+}
+
+if {![variant_isset python25] && ![variant_isset python26]} { 
+    default_variants +python27
 }
 
 
