gtk-osx-application: don't set variant as default if it's already selected
git-svn-id: https://svn.macports.org/repository/macports/trunk@72384 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gtk-osx-application/Portfile
+++ b/dports/devel/gtk-osx-application/Portfile
@@ -77,7 +77,7 @@ variant python27 conflicts python26 conflicts python25 description {Use Python 2
     configure.pre_args          --prefix=${python_prefix}
 }
 
-if {![variant_isset python25] && ![variant_isset python26]} { 
+if {![variant_isset python25] && ![variant_isset python26] && ![variant_isset python27]} { 
     default_variants +python27
 }
 
