python 2.7 (default) variant for gPodder
git-svn-id: https://svn.macports.org/repository/macports/trunk@72385 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gpodder/Portfile
+++ b/dports/gnome/gpodder/Portfile
@@ -43,7 +43,7 @@ variant python25 conflicts python26 description {Use Python 2.5} {
 }
 
 
-set my_python "${frameworks_dir}/Python.framework/Versions/2.6"
+set my_python "DUMMY_VALUE_WILL_BE_OVERWRITTEN"
 
 variant python26 conflicts python25 description {Use Python 2.6} {
     depends_lib-append  port:py26-feedparser\
@@ -51,6 +51,8 @@ variant python26 conflicts python25 description {Use Python 2.6} {
                         port:dbus-python26\
                         port:py26-mygpoclient
     
+    set my_python "${frameworks_dir}/Python.framework/Versions/2.6"
+
     post-patch {
         reinplace s|python|${my_python}/bin/python|g ${worksrcpath}/Makefile
     }
@@ -67,8 +69,32 @@ variant python26 conflicts python25 description {Use Python 2.6} {
     }
 }
 
-if {![variant_isset python25] && ![variant_isset python26]} {
-    default_variants +python26
+variant python27 conflicts python26 conflicts python25 description {Use Python 2.7} {
+    depends_lib-append  port:py27-feedparser\
+                        port:py27-pil\
+                        port:dbus-python27\
+                        port:py27-mygpoclient
+
+    set my_python "${frameworks_dir}/Python.framework/Versions/2.7"
+    
+    post-patch {
+        reinplace s|python|${my_python}/bin/python|g ${worksrcpath}/Makefile
+    }
+
+    # install in python 2.7 prefix, see bug #22522
+    destroot.args PREFIX=${frameworks_dir}/Python.framework/Versions/2.7
+
+    # Install the 2.7 apps in the standard path :
+    # the 2 variants can't be active simultaneously.
+    post-destroot {
+        foreach {app} {gpodder gpo gpodder-backup} {
+            ln -s ${my_python}/bin/${app} ${destroot}${prefix}/bin/${app}
+        }
+    }
+}
+
+if {![variant_isset python25] && ![variant_isset python26] && ![variant_isset python27]} {
+    default_variants +python27
 }
 
 variant quartz {
