--- a/dports/python/py26-webkitgtk/Portfile
+++ b/dports/python/py26-webkitgtk/Portfile
@@ -27,6 +27,7 @@ configure.pre_args-delete  --prefix=${prefix}
 configure.pre_args-append  --prefix=${python_prefix}
 configure.args-append      --includedir=${python_prefix}/include/python2.6
 configure.pkg_config_path  ${python_prefix}/lib/pkgconfig
+configure.env-append PYGOBJECT_CODEGEN=${python_prefix}/bin/pygobject-codegen-2.0
 
 configure.python    ${prefix}/bin/python2.6
 
