libpaper: version bump to 1.1.24
git-svn-id: https://svn.macports.org/repository/macports/trunk@72388 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/libpaper/Portfile
+++ b/dports/print/libpaper/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            libpaper
-version         1.1.23-nmu2
-set my_version  [strsed ${version} g/-/+/]
+version         1.1.24
 categories      print
 maintainers     nomaintainer
 platforms       darwin
@@ -18,15 +17,12 @@ long_description \
 homepage        http://packages.qa.debian.org/libp/libpaper.html
 master_sites    debian:libp/${name}/
 
-distname        ${name}_${my_version}
-worksrcdir      ${name}-${my_version}
+distname        ${name}_${version}
+worksrcdir      ${name}-${version}
 
-checksums       sha1    4767d4a76fa2e5c77b98e9f7866c3fb5aac6c158 \
-                rmd160  564b73752c01cc1f7d56cb7e54388e90d6f3aa4a
+checksums       rmd160  12e7234616bfe648337381c7c07e7de7bcfbea28
 
-patchfiles      patch-paper.c.diff  \
-                patch-paperconf.c.diff  \
-                patch-Makefile.in.diff
+patchfiles      patch-lib_Makefile.in.diff
 
 post-patch {
     set fd [open [file join ${worksrcpath}/lib paperspecs] a 0644]
@@ -47,5 +43,4 @@ configure.args  --mandir=${prefix}/share/man    \
                 --sysconfdir=${prefix}/etc
 
 livecheck.type      regex
-livecheck.version   ${my_version}
 livecheck.regex     {"stable">([^<]+)}
