updated Platypus to 4.4 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72390 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/Platypus/Portfile
+++ b/dports/aqua/Platypus/Portfile
@@ -4,7 +4,7 @@ PortSystem		1.0
 PortGroup		xcode 1.0
 
 name			Platypus
-version			3.4
+version			4.4
 categories		aqua devel
 maintainers		me.com:tsupplis
 description		Program for creating application wrappers around scripts.
@@ -19,15 +19,15 @@ long_description	Platypus is a program for creating application \
 			root using Authentication Manager and more.
 
 homepage		http://www.sveinbjorn.org/platypus/
-master_sites	http://www.sveinbjorn.org/files/software/platypus/
+master_sites		http://www.sveinbjorn.org/files/software/platypus/
 distname		platypus${version}.src
 use_zip			yes
 
-checksums		md5 775d39e01562a97739043644865c7062 \
-				sha1 fdb9967f5f3edbb9f82e206455db21aa1e420496 \
-				rmd160 2a1dc4cf5247c688706f7724ddfc0945d2805146
-				
-worksrcdir		${name}
+checksums           md5     e6fe23f7037a873394b70bcc62843940 \
+                    sha1    31faa5ea5e3e266a213aa3dd3c1fa1173e611110 \
+                    rmd160  0708e489de457d79cecb8192f1747459df8402c8
+
+worksrcdir		"${name}-${version}-Source"
 
 # Dummy configure to enable universal variant.
 use_configure	yes
@@ -41,6 +41,15 @@ if {! [variant_isset universal]} {
 
 	xcode.build.settings-append		ARCHS=${arch}
 	xcode.destroot.settings-append	ARCHS=${arch}
+}
+
+build.target platypus ScriptExec Platypus
+destroot.target Platypus
+
+post-destroot {
+	reinplace "s|/usr/local|${destroot}${prefix}|g" ${worksrcpath}/Scripts/InstallCommandLineTool.sh
+	reinplace "s|English.lproj/||g" ${worksrcpath}/Scripts/InstallCommandLineTool.sh
+	exec /bin/bash ${worksrcpath}/Scripts/InstallCommandLineTool.sh ${destroot}/${applications_dir}/Platypus.app/Contents/Resources
 }
 
 livecheck.type	regex
