--- a/dports/gnome/gpodder/Portfile
+++ b/dports/gnome/gpodder/Portfile
@@ -104,8 +104,10 @@ variant quartz {
 variant html_notes description {Use WebkitGtk+ to show episode notes in HTML format} {
 	if {[variant_isset python25]} {
 		depends_lib-append  port:py25-webkitgtk
-	} else {
+	} else if {[variant_isset python26]} {
 		depends_lib-append  port:py26-webkitgtk
+	} else {
+		depends_lib-append  port:py27-webkitgtk
 	}
 }
 
