devel/jam - proper variant documentation
git-svn-id: https://svn.macports.org/repository/macports/trunk@72392 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/jam/Portfile
+++ b/dports/devel/jam/Portfile
@@ -48,14 +48,12 @@ destroot {
 	xinstall -m 644 ${worksrcpath}/Jamfile.html ${destroot}${prefix}/share/doc/${name}/
 }
 
-# Metrowerks compiler.
-variant mw {
+variant mw description {Use Metrowerks compiler} {
 	patchfiles			patch-Makefile-mw.diff \
 						patch-variable.c.diff
 }
 
-# Debug (no optimization + debug)
-variant debug {
+variant debug description {Build with no optimization and debug options} {
 	patchfiles			patch-Makefile-debug.diff \
 						patch-variable.c.diff
 
