--- a/dports/databases/tcl-sqlite3/Portfile
+++ b/dports/databases/tcl-sqlite3/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			tcl-sqlite3
 version			3.6.22
+revision        1
 categories		databases
 platforms		darwin
 maintainers		mww
@@ -27,6 +28,8 @@ checksums           md5     a17bd53f1fde11f84adf79c6a1510ce5 \
 depends_lib		port:readline \
 				port:sqlite3 \
 				port:tcl
+
+patchfiles      tcl-shlib-suffix.diff
 
 post-patch {
 	reinplace "s|tclsh8.4|tclsh|g" ${worksrcpath}/configure
