libgpod: add required dependency on libplist
git-svn-id: https://svn.macports.org/repository/macports/trunk@72399 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/libgpod/Portfile
+++ b/dports/multimedia/libgpod/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                libgpod
 version             0.8.0
+revision            1
 categories          multimedia
 platforms           darwin
 maintainers         rmstonecipher openmaintainer
@@ -21,7 +22,8 @@ checksums           md5     6660f74cc53293dcc847407aa5f672ce \
 depends_build       path:bin/pkg-config:pkgconfig
 
 depends_lib         port:p5-xml-parser \
-                    port:py26-gobject
+                    port:py26-gobject \
+                    port:libplist
 
 set python.branch   2.6
 set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
