nginx: fix spaces, add modeline
git-svn-id: https://svn.macports.org/repository/macports/trunk@72402 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/nginx/Portfile
+++ b/dports/www/nginx/Portfile
@@ -1,13 +1,16 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name            nginx
-version         0.7.65
-categories      www mail
-platforms       darwin
-maintainers     boeyms openmaintainer
-description     High-performance HTTP(S) server, HTTP(S) reverse proxy and IMAP/POP3 proxy server
+name                nginx
+version             0.7.65
+revision            0
+categories          www mail
+platforms           darwin
+maintainers         boeyms openmaintainer
+
+description         High-performance HTTP(S) server, HTTP(S) reverse proxy and IMAP/POP3 proxy server
 long_description    Nginx ("engine x") is a high-performance HTTP(S) server \
                     and reverse proxy, as well as an IMAP/POP3 proxy server. \
                     Nginx was written by Igor Sysoev for Rambler.ru, Russia's \
@@ -17,39 +20,43 @@ long_description    Nginx ("engine x") is a high-performance HTTP(S) server \
                     Although still in beta, Nginx is known for its stability, \
                     rich feature set, simple configuration, and low resource \
                     consumption.
-homepage        http://nginx.net/
-master_sites    http://sysoev.ru/nginx:nginx \
-                http://www.grid.net.ru/nginx/download/:upload_module \
-                http://wiki.nginx.org/images/1/10/:secure_download_module \
-                http://wiki.nginx.org/images/b/bb/:zip_module \
-                http://people.freebsd.org/~osa/:redis_module
-distfiles       ${name}-${version}${extract.suffix}:nginx
-checksums       ${name}-${version}${extract.suffix} \
-                md5     abc4f76af450eedeb063158bd963feaa \
-                sha1    f2dcc8e015903ff1277e6fa427f9b7911c4f35ce \
-                rmd160  c03386b135ec4d72d2997b19ea70b28aeaa7a6da
 
-depends_lib     port:pcre port:zlib
+homepage            http://nginx.net/
+master_sites        http://sysoev.ru/nginx:nginx \
+                    http://www.grid.net.ru/nginx/download/:upload_module \
+                    http://wiki.nginx.org/images/1/10/:secure_download_module \
+                    http://wiki.nginx.org/images/b/bb/:zip_module \
+                    http://people.freebsd.org/~osa/:redis_module
 
-patchfiles      patch-auto__install.diff patch-conf__nginx.conf.diff
+distfiles           ${name}-${version}${extract.suffix}:nginx
+checksums           ${name}-${version}${extract.suffix} \
+                    md5     abc4f76af450eedeb063158bd963feaa \
+                    sha1    f2dcc8e015903ff1277e6fa427f9b7911c4f35ce \
+                    rmd160  c03386b135ec4d72d2997b19ea70b28aeaa7a6da
 
-set nginx_confdir       ${prefix}/etc/${name}
-set nginx_logdir        ${prefix}/var/log/${name}
-set nginx_rundir        ${prefix}/var/run/${name}
+depends_lib         \
+                    port:pcre \
+                    port:zlib
 
-set nginx_pidfile       ${nginx_rundir}/${name}.pid
+patchfiles          patch-auto__install.diff \
+                    patch-conf__nginx.conf.diff
+
+set nginx_confdir   ${prefix}/etc/${name}
+set nginx_logdir    ${prefix}/var/log/${name}
+set nginx_rundir    ${prefix}/var/run/${name}
+set nginx_pidfile   ${nginx_rundir}/${name}.pid
 
 configure.args-append \
-            --with-cc-opt=\"${configure.cppflags} ${configure.cflags}\" \
-            --with-ld-opt=\"${configure.ldflags}\" \
-            --conf-path=${nginx_confdir}/${name}.conf \
-            --error-log-path=${nginx_logdir}/error.log \
-            --http-log-path=${nginx_logdir}/access.log \
-            --pid-path=${nginx_pidfile} \
-            --lock-path=${nginx_rundir}/${name}.lock \
-            --http-client-body-temp-path=${nginx_rundir}/client_body_temp \
-            --http-proxy-temp-path=${nginx_rundir}/proxy_temp \
-            --http-fastcgi-temp-path=${nginx_rundir}/fastcgi_temp
+                    --with-cc-opt=\"${configure.cppflags} ${configure.cflags}\" \
+                    --with-ld-opt=\"${configure.ldflags}\" \
+                    --conf-path=${nginx_confdir}/${name}.conf \
+                    --error-log-path=${nginx_logdir}/error.log \
+                    --http-log-path=${nginx_logdir}/access.log \
+                    --pid-path=${nginx_pidfile} \
+                    --lock-path=${nginx_rundir}/${name}.lock \
+                    --http-client-body-temp-path=${nginx_rundir}/client_body_temp \
+                    --http-proxy-temp-path=${nginx_rundir}/proxy_temp \
+                    --http-fastcgi-temp-path=${nginx_rundir}/fastcgi_temp
 
 universal_variant   no
 
