nginx: update to latest stable version 0.8.52
git-svn-id: https://svn.macports.org/repository/macports/trunk@72403 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/nginx/Portfile
+++ b/dports/www/nginx/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                nginx
-version             0.7.65
+version             0.8.52
 revision            0
 categories          www mail
 platforms           darwin
@@ -30,9 +30,9 @@ master_sites        http://sysoev.ru/nginx:nginx \
 
 distfiles           ${name}-${version}${extract.suffix}:nginx
 checksums           ${name}-${version}${extract.suffix} \
-                    md5     abc4f76af450eedeb063158bd963feaa \
-                    sha1    f2dcc8e015903ff1277e6fa427f9b7911c4f35ce \
-                    rmd160  c03386b135ec4d72d2997b19ea70b28aeaa7a6da
+                    md5     8c1f0b6b9ad205b65248b1c55d3d801d \
+                    sha1    086caf2e975ab70bcb95b2df6dfcc3fd0f3d6344 \
+                    rmd160  6533826ace004cdcb745e014bb6c0394fcff8170
 
 depends_lib         \
                     port:pcre \
@@ -56,7 +56,8 @@ configure.args-append \
                     --lock-path=${nginx_rundir}/${name}.lock \
                     --http-client-body-temp-path=${nginx_rundir}/client_body_temp \
                     --http-proxy-temp-path=${nginx_rundir}/proxy_temp \
-                    --http-fastcgi-temp-path=${nginx_rundir}/fastcgi_temp
+                    --http-fastcgi-temp-path=${nginx_rundir}/fastcgi_temp \
+                    --http-uwsgi-temp-path=${nginx_rundir}/uwsgi_temp
 
 universal_variant   no
 
@@ -195,3 +196,7 @@ variant redis description {Enable Ngx HTTP Redis module} {
                             md5     c731d6ac14b4c8a99fda2c7e89356a8f
     configure.args-append   --add-module=${workpath}/${redis_distname}
 }
+
+livecheck.type      regex
+livecheck.url       ${homepage}
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)"
