Added notes to remind us to keep the perl5 and perl5.* versions in sync so   that the perl5 will create the correct symlinks
git-svn-id: https://svn.macports.org/repository/macports/trunk@72404 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/perl5.10/Portfile
+++ b/dports/lang/perl5.10/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            perl5.10
 conflicts       perl5.8 perl5.12
+## NOTE: keep this "version" in sync with the perl5 port
 version         5.10.1
 revision        1
 categories      lang
