--- a/dports/lang/perl5.12/Portfile
+++ b/dports/lang/perl5.12/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            perl5.12
 conflicts       perl5.8 perl5.10
+## NOTE: keep this "version" in sync with the perl5 port
 version         5.12.2
 revision        0
 categories      lang
