--- a/dports/lang/perl5.8/Portfile
+++ b/dports/lang/perl5.8/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            perl5.8
 conflicts       perl5.10 perl5.12
+## NOTE: keep this "version" in sync with the perl5 port
 version         5.8.9
 revision        3
 categories      lang
@@ -93,6 +94,10 @@ post-destroot {
 
 variant threads description {Build with thread support} {
     configure.args-append   -Dusethreads
+}
+
+variant multiplicity description {Build with multiplicity support} {
+    configure.args-append   -Dusemultiplicity=y
 }
 
 variant shared description {Build shared perl library} {
