--- a/dports/lang/perl5/Portfile
+++ b/dports/lang/perl5/Portfile
@@ -4,6 +4,7 @@
 PortSystem      1.0
 
 name            perl5
+## NOTE: keep this "version" in sync with the perl5.8 port
 version         5.8.9
 categories      lang
 platforms       darwin freebsd linux
@@ -26,6 +27,7 @@ variant perl5_10 description { use perl 5.10 instead of perl 5.8 or perl 5.12} {
     depends_lib-delete  port:perl5.8
     depends_lib-append  port:perl5.10
 
+    ## NOTE: keep this "version" in sync with the perl5.10 port
     version 5.10.1
 }
 
@@ -33,6 +35,7 @@ variant perl5_12 description { use perl 5.12 instead of perl 5.8 or perl 5.10 } 
     depends_lib-delete  port:perl5.8
     depends_lib-append  port:perl5.12
 
+    ## NOTE: keep this "version" in sync with the perl5.12 port
     version 5.12.2
 }
 
